Prevent crash when folding

BUG:200858

svn path=/trunk/KDE/kdelibs/kate/; revision=1064050